# airflow-provider-nomad

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README.rst  provider.yaml  pyproject.toml  pyproject.toml.template  tox.ini
.github/workflows/: jekyll-gh-pages.yml  main.yaml  release.yaml  test.yaml
.pre_commit/: pyproject_toml_sync
.pre_commit/git/hooks/: commit-msg  pre-commit
docs/: .buildinfo  _config.yaml  changelog.rst  index.html  index.rst  nomad_executor.rst  nomad_job_operator.html  nomad_job_operator.rst  nomad_task_operator.html  nomad_task_operator.rst  search.html  searchindex.js  system_tests.rst  usage.html  usage.rst
docs-rst/: changelog.rst  commits.rst  conf.py  index.rst  nomad_executor.rst  nomad_job_operator.rst  nomad_logger.rst  nomad_python_task_decorator.rst  nomad_python_task_operator.rst  nomad_task_decorator.rst  nomad_task_operator.rst  system_tests.rst
docs/_gen/: packages-metadata.json
docs/_sources/: nomad_job_operator.rst.txt
docs/apache-airflow-providers-nomad/0.0.2/: objects.inv  system_tests.html
docs/apache-airflow-providers-nomad/0.0.2/_gen/: packages-metadata.json
docs/apache-airflow-providers-nomad/0.0.2/_sources/: nomad_logger.rst.txt
docs/apache-airflow-providers-nomad/0.0.3/: genindex.html
docs/apache-airflow-providers-nomad/0.0.3/output-spelling-results-apache-airflow-providers-nomad/: changelog.spelling
docs/apache-airflow-providers-nomad/latest/: genindex.html  nomad_executor.html  nomad_job_decorator.html  nomad_job_operator.html  nomad_logger.html  objects.inv  system_tests.html
docs/apache-airflow-providers-nomad/latest/_modules/: index.html
docs/apache-airflow-providers-nomad/latest/_sources/: changelog.rst.txt  commits.rst.txt
docs/apache-airflow-providers-nomad/latest/_static/: basic.css
docs/apache-airflow-providers-nomad/stable/: changelog.html  security.html
docs/apache-airflow-providers-nomad/stable/_sources/: index.rst.txt  nomad_job_operator.rst.txt
docs/docs/apache-airflow-providers-nomad/0.0.2/: changelog.html  commits.html  nomad_task_operator.html  py-modindex.html
docs/docs/apache-airflow-providers-nomad/0.0.3/: changelog.html  commits.html  configurations-ref.html  index.html  nomad_executor.html  nomad_task_operator.html  objects.inv  search.html  system_tests.html
docs/docs/apache-airflow-providers-nomad/0.0.4/: commits.html  configurations-ref.html  genindex.html  index.html  known_issues.html  nomad_job_decorator.html  nomad_job_operator.html  nomad_logger.html  nomad_task_decorator.html  nomad_task_operator.html  objects.inv  py-modindex.html  search.html  searchindex.js  security.html
docs/docs/apache-airflow-providers-nomad/0.0.5/: changelog.html  commits.html  configurations-ref.html  index.html  known_issues.html  nomad_executor.html  nomad_job_decorator.html  nomad_logger.html  (+7 more)
docs/html/stable/: .buildinfo  changelog.html  commits.html  configurations-ref.html  genindex.html  index.html  nomad_executor.html  nomad_job_operator.html  nomad_logger.html  nomad_task_operator.html  objects.inv  py-modindex.html  search.html  searchindex.js  security.html  system_tests.html  usage.html
docs/output-spelling-results-apache-airflow-providers-nomad/: changelog.spelling  nomad_executor.spelling
docs/scripts/: gh_pages_prepare.sh
env/pre_commit/: pyproject_toml_sync
environment/: Dockerfile.runner  nomad_client.hcl
scripts/: af_docs_generation.sh  af_docs_git_log.sh  release.sh  version_change.sh
src/airflow/: __init__.py
tests/: conftest.py
tests/system/nomad/: conftest.py  constants.py  test_dag_bash_operator.py  test_dag_trigger.py  test_nomad_job_operator.py  test_nomad_manager.py  test_nomad_task_operator.py  test_system_nomad_executor.py  test_utils.py  utils.py
tests/unit/nomad/: conftest.py  test_job_manager.py  test_nomad_executor.py  test_nomad_job_decorator.py  test_nomad_job_operator.py  test_nomad_log.py  test_nomad_manager.py  test_nomad_models.py  test_nomad_python_task_decorator.py  test_nomad_python_task_operator.py  test_nomad_task_decorator.py  test_nomad_task_operator.py  test_nomad_utils.py
(+2402 files in other folders)
