# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["flit_core==3.12.0"]
build-backend = "flit_core.buildapi"

[project]
name = "apache-airflow-providers-nomad"
version = "0.0.dev4"
description = "Provider package for Nomad (executor, operators, etc.) for Apache Airflow"
readme = "README.rst"
authors = [
    {name="Judit Novak", email="judit.novak@gmail.com"},
]
maintainers = [
    {name="Judit Novak", email="judit.novak@gmail.com"},
]
keywords = [ "airflow-provider", "nomad", "airflow", "integration" ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.10"

# The dependencies should be modified in place in the generated file.
# Any change in the dependencies is preserved when the file is regenerated
# Make sure to run ``breeze static-checks --type update-providers-dependencies --all-files``
# After you modify the dependencies, and rebuild your Breeze CI image with ``breeze ci-image build``
dependencies = [
    "apache-airflow-core==3.0.6",
    "apache-airflow-task-sdk",
    "flask>=3.1.2",
    "jq>=1.10.0",
    "pydantic>=2.11.7",
    "python-nomad>=2.1.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "apache-airflow-devel-common",
    # Additional devel dependencies (do not remove this line and add extra development dependencies)
    "pytest>=8.4.1",
    "tox>=4.28.4",
    "pudb>=2025.1",
    "isort>=6.0.1",
    "netifaces>=0.11.0",
    "pre-commit>=4.3.0",
]

# To build docs:
#
#    uv run --group docs build-docs
#
# To enable auto-refreshing build with server:
#
#    uv run --group docs build-docs --autobuild
#
# To see more options:
#
#    uv run --group docs build-docs --help
#
docs = [
    "apache-airflow-devel-common[docs]"
]

[tool.uv.sources]
apache-airflow-devel-common = { git = "https://github.com/apache/airflow.git", subdirectory="devel-common", tag="3.0.6" }

[project.urls]
# "Documentation" = "https://airflow.apache.org/docs/apache-airflow-providers-nomad/0.0.1"
# "Changelog" = "https://airflow.apache.org/docs/apache-airflow-providers-nomad/0.0.1/changelog.html"
# "Bug Tracker" = "https://github.com/apache/airflow/issues"
# "Source Code" = "https://github.com/apache/airflow"
# "Slack Chat" = "https://s.apache.org/airflow-slack"
# "Mastodon" = "https://fosstodon.org/@airflow"
# "YouTube" = "https://www.youtube.com/channel/UCSXwxpWZQ7XZ1WL3wqevChA/"

[project.entry-points."apache_airflow_provider"]
provider_info = "airflow.providers.nomad.get_provider_info:get_provider_info"

[tool.flit.module]
name = "airflow.providers.nomad"

# [tool.setuptools]
# py-modules = []

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.isort]
line_length = 100

[tool.ruff]
line-length = 100

# [tool.pytest.ini_options]
# pythonpath = ["."]
